[gd_scene load_steps=8 format=2]

[ext_resource path="res://screens/standard-game/StandardGame.gd" type="Script" id=1]
[ext_resource path="res://entities/player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/spawner/Spawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/standard-game/StandardGame.tscn" type="PackedScene" id=4]
[ext_resource path="res://entities/spawn-area/SpawnArea.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/PressStart.tres" type="DynamicFont" id=6]
[ext_resource path="res://entities/enemy-spawner/EnemySpawner.tscn" type="PackedScene" id=7]

[node name="StandardGame" type="Node2D"]
script = ExtResource( 1 )

[node name="UILayer" type="Node2D" parent="."]
z_index = 2

[node name="PointsLabel" type="Label" parent="UILayer"]
margin_left = -108.0
margin_top = -175.0
margin_right = 108.0
margin_bottom = -161.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 6 )
text = "Points placeholder"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spawners" type="Node" parent="."]

[node name="PlayerSpawner" parent="Spawners" instance=ExtResource( 3 )]
position = Vector2( -101, -62 )
entity_to_spawn = ExtResource( 2 )
spawn_on_ready = true

[node name="SpawnArea" parent="Spawners" instance=ExtResource( 5 )]
position = Vector2( 0, 17 )

[node name="EnemySpawner" parent="Spawners" instance=ExtResource( 7 )]
position = Vector2( -1, 14 )
scale = Vector2( 1.78125, 1.42188 )

[node name="ActiveEntities" type="Node" parent="."]

[node name="Background" parent="." instance=ExtResource( 4 )]
tile_data = PoolIntArray( -786454, 0, 0, -786453, 11, 0, -786452, 11, 0, -786451, 11, 0, -786450, 11, 0, -786449, 11, 0, -786448, 11, 0, -786447, 11, 0, -786446, 11, 0, -786445, 11, 0, -786444, 11, 0, -786443, 11, 0, -786442, 11, 0, -786441, 11, 0, -786440, 11, 0, -786439, 11, 0, -786438, 11, 0, -786437, 11, 0, -786436, 11, 0, -786435, 11, 0, -786434, 11, 0, -786433, 11, 0, -851968, 11, 0, -851967, 11, 0, -851966, 11, 0, -851965, 11, 0, -851964, 11, 0, -851963, 11, 0, -851962, 11, 0, -851961, 11, 0, -851960, 11, 0, -851959, 11, 0, -851958, 11, 0, -851957, 11, 0, -851956, 11, 0, -851955, 11, 0, -851954, 11, 0, -851953, 11, 0, -851952, 11, 0, -851951, 11, 0, -851950, 11, 0, -851949, 11, 0, -851948, 11, 0, -851947, 0, 0, -720918, 0, 0, -720917, 8, 0, -720916, 8, 0, -720915, 8, 0, -720914, 8, 0, -720913, 8, 0, -720912, 8, 0, -720911, 8, 0, -720910, 8, 0, -720909, 8, 0, -720908, 8, 0, -720907, 8, 0, -720906, 8, 0, -720905, 8, 0, -720904, 8, 0, -720903, 8, 0, -720902, 8, 0, -720901, 8, 0, -720900, 8, 0, -720899, 8, 0, -720898, 8, 0, -720897, 8, 0, -786432, 8, 0, -786431, 8, 0, -786430, 8, 0, -786429, 8, 0, -786428, 8, 0, -786427, 8, 0, -786426, 8, 0, -786425, 8, 0, -786424, 8, 0, -786423, 8, 0, -786422, 8, 0, -786421, 8, 0, -786420, 8, 0, -786419, 8, 0, -786418, 8, 0, -786417, 8, 0, -786416, 8, 0, -786415, 8, 0, -786414, 8, 0, -786413, 8, 0, -786412, 8, 0, -786411, 0, 0, -655382, 0, 0, -655381, 8, 0, -655380, 0, 0, -655379, 0, 0, -655378, 0, 0, -655377, 0, 0, -655376, 0, 0, -655375, 0, 0, -655374, 0, 0, -655373, 0, 0, -655372, 0, 0, -655371, 0, 0, -655370, 0, 0, -655369, 0, 0, -655368, 0, 0, -655367, 0, 0, -655366, 0, 0, -655365, 0, 0, -655364, 0, 0, -655363, 0, 0, -655362, 0, 0, -655361, 0, 0, -720896, 0, 0, -720895, 0, 0, -720894, 0, 0, -720893, 0, 0, -720892, 0, 0, -720891, 0, 0, -720890, 0, 0, -720889, 0, 0, -720888, 0, 0, -720887, 0, 0, -720886, 0, 0, -720885, 0, 0, -720884, 0, 0, -720883, 0, 0, -720882, 0, 0, -720881, 0, 0, -720880, 0, 0, -720879, 0, 0, -720878, 0, 0, -720877, 0, 0, -720876, 8, 0, -720875, 0, 0, -589846, 0, 0, -589845, 8, 0, -589844, 8, 0, -589843, 8, 0, -589842, 8, 0, -589841, 8, 0, -589840, 8, 0, -589839, 8, 0, -589838, 8, 0, -589837, 8, 0, -589836, 8, 0, -589835, 8, 0, -589834, 8, 0, -589833, 8, 0, -589832, 8, 0, -589831, 8, 0, -589830, 8, 0, -589829, 8, 0, -589828, 8, 0, -589827, 8, 0, -589826, 8, 0, -589825, 8, 0, -655360, 8, 0, -655359, 8, 0, -655358, 8, 0, -655357, 8, 0, -655356, 8, 0, -655355, 8, 0, -655354, 8, 0, -655353, 8, 0, -655352, 8, 0, -655351, 8, 0, -655350, 8, 0, -655349, 8, 0, -655348, 8, 0, -655347, 8, 0, -655346, 8, 0, -655345, 8, 0, -655344, 8, 0, -655343, 8, 0, -655342, 8, 0, -655341, 8, 0, -655340, 8, 0, -655339, 0, 0, -524310, 0, 0, -524309, 8, 0, -524308, 0, 0, -524307, 0, 0, -524306, 0, 0, -524305, 0, 0, -524304, 0, 0, -524303, 0, 0, -524302, 0, 0, -524301, 0, 0, -524300, 0, 0, -524299, 0, 0, -524298, 0, 0, -524297, 0, 0, -524296, 0, 0, -524295, 0, 0, -524294, 0, 0, -524293, 0, 0, -524292, 0, 0, -524291, 0, 0, -524290, 0, 0, -524289, 0, 0, -589824, 0, 0, -589823, 0, 0, -589822, 0, 0, -589821, 0, 0, -589820, 0, 0, -589819, 0, 0, -589818, 0, 0, -589817, 0, 0, -589816, 0, 0, -589815, 0, 0, -589814, 0, 0, -589813, 0, 0, -589812, 0, 0, -589811, 0, 0, -589810, 0, 0, -589809, 0, 0, -589808, 0, 0, -589807, 0, 0, -589806, 0, 0, -589805, 0, 0, -589804, 8, 0, -589803, 0, 0, -458774, 0, 0, -458773, 8, 0, -458772, 0, 0, -458771, 0, 0, -458770, 0, 0, -458769, 0, 0, -458768, 0, 0, -458767, 0, 0, -458766, 0, 0, -458765, 0, 0, -458764, 0, 0, -458763, 0, 0, -458762, 0, 0, -458761, 0, 0, -458760, 0, 0, -458759, 0, 0, -458758, 0, 0, -458757, 0, 0, -458756, 0, 0, -458755, 0, 0, -458754, 0, 0, -458753, 0, 0, -524288, 0, 0, -524287, 0, 0, -524286, 0, 0, -524285, 0, 0, -524284, 0, 0, -524283, 0, 0, -524282, 0, 0, -524281, 0, 0, -524280, 0, 0, -524279, 0, 0, -524278, 0, 0, -524277, 0, 0, -524276, 0, 0, -524275, 0, 0, -524274, 0, 0, -524273, 0, 0, -524272, 0, 0, -524271, 0, 0, -524270, 0, 0, -524269, 0, 0, -524268, 8, 0, -524267, 0, 0, -393238, 0, 0, -393237, 8, 0, -393236, 0, 0, -393235, 0, 0, -393234, 0, 0, -393233, 0, 0, -393232, 0, 0, -393231, 0, 0, -393230, 0, 0, -393229, 0, 0, -393228, 0, 0, -393227, 0, 0, -393226, 0, 0, -393225, 0, 0, -393224, 0, 0, -393223, 0, 0, -393222, 0, 0, -393221, 0, 0, -393220, 0, 0, -393219, 0, 0, -393218, 0, 0, -393217, 0, 0, -458752, 0, 0, -458751, 0, 0, -458750, 0, 0, -458749, 0, 0, -458748, 0, 0, -458747, 0, 0, -458746, 0, 0, -458745, 0, 0, -458744, 0, 0, -458743, 0, 0, -458742, 0, 0, -458741, 0, 0, -458740, 0, 0, -458739, 0, 0, -458738, 0, 0, -458737, 0, 0, -458736, 0, 0, -458735, 0, 0, -458734, 0, 0, -458733, 0, 0, -458732, 8, 0, -458731, 0, 0, -327702, 0, 0, -327701, 8, 0, -327700, 0, 0, -327699, 0, 0, -327698, 0, 0, -327697, 0, 0, -327696, 0, 0, -327695, 0, 0, -327694, 0, 0, -327693, 0, 0, -327692, 0, 0, -327691, 0, 0, -327690, 0, 0, -327689, 0, 0, -327688, 0, 0, -327687, 0, 0, -327686, 0, 0, -327685, 0, 0, -327684, 0, 0, -327683, 0, 0, -327682, 0, 0, -327681, 0, 0, -393216, 0, 0, -393215, 0, 0, -393214, 0, 0, -393213, 0, 0, -393212, 0, 0, -393211, 0, 0, -393210, 0, 0, -393209, 0, 0, -393208, 0, 0, -393207, 0, 0, -393206, 0, 0, -393205, 0, 0, -393204, 0, 0, -393203, 0, 0, -393202, 0, 0, -393201, 0, 0, -393200, 0, 0, -393199, 0, 0, -393198, 0, 0, -393197, 0, 0, -393196, 8, 0, -393195, 0, 0, -262166, 0, 0, -262165, 8, 0, -262164, 0, 0, -262163, 0, 0, -262162, 0, 0, -262161, 0, 0, -262160, 0, 0, -262159, 0, 0, -262158, 0, 0, -262157, 0, 0, -262156, 0, 0, -262155, 0, 0, -262154, 0, 0, -262153, 0, 0, -262152, 0, 0, -262151, 0, 0, -262150, 0, 0, -262149, 0, 0, -262148, 0, 0, -262147, 0, 0, -262146, 0, 0, -262145, 0, 0, -327680, 0, 0, -327679, 0, 0, -327678, 0, 0, -327677, 0, 0, -327676, 0, 0, -327675, 0, 0, -327674, 0, 0, -327673, 0, 0, -327672, 0, 0, -327671, 0, 0, -327670, 0, 0, -327669, 0, 0, -327668, 0, 0, -327667, 0, 0, -327666, 0, 0, -327665, 0, 0, -327664, 0, 0, -327663, 0, 0, -327662, 0, 0, -327661, 0, 0, -327660, 8, 0, -327659, 0, 0, -196630, 0, 0, -196629, 8, 0, -196628, 0, 0, -196627, 0, 0, -196626, 0, 0, -196625, 0, 0, -196624, 0, 0, -196623, 0, 0, -196622, 0, 0, -196621, 0, 0, -196620, 0, 0, -196619, 0, 0, -196618, 0, 0, -196617, 0, 0, -196616, 0, 0, -196615, 0, 0, -196614, 0, 0, -196613, 0, 0, -196612, 0, 0, -196611, 0, 0, -196610, 0, 0, -196609, 0, 0, -262144, 0, 0, -262143, 0, 0, -262142, 0, 0, -262141, 0, 0, -262140, 0, 0, -262139, 0, 0, -262138, 0, 0, -262137, 0, 0, -262136, 0, 0, -262135, 0, 0, -262134, 0, 0, -262133, 0, 0, -262132, 0, 0, -262131, 0, 0, -262130, 0, 0, -262129, 0, 0, -262128, 0, 0, -262127, 0, 0, -262126, 0, 0, -262125, 0, 0, -262124, 8, 0, -262123, 0, 0, -131094, 0, 0, -131093, 8, 0, -131092, 0, 0, -131091, 0, 0, -131090, 0, 0, -131089, 0, 0, -131088, 0, 0, -131087, 0, 0, -131086, 0, 0, -131085, 0, 0, -131084, 0, 0, -131083, 0, 0, -131082, 0, 0, -131081, 0, 0, -131080, 0, 0, -131079, 0, 0, -131078, 0, 0, -131077, 0, 0, -131076, 0, 0, -131075, 0, 0, -131074, 0, 0, -131073, 0, 0, -196608, 0, 0, -196607, 0, 0, -196606, 0, 0, -196605, 0, 0, -196604, 0, 0, -196603, 0, 0, -196602, 0, 0, -196601, 0, 0, -196600, 0, 0, -196599, 0, 0, -196598, 0, 0, -196597, 0, 0, -196596, 0, 0, -196595, 0, 0, -196594, 0, 0, -196593, 0, 0, -196592, 0, 0, -196591, 0, 0, -196590, 0, 0, -196589, 0, 0, -196588, 8, 0, -196587, 0, 0, -65558, 0, 0, -65557, 8, 0, -65556, 0, 0, -65555, 0, 0, -65554, 0, 0, -65553, 0, 0, -65552, 0, 0, -65551, 0, 0, -65550, 0, 0, -65549, 0, 0, -65548, 0, 0, -65547, 0, 0, -65546, 0, 0, -65545, 0, 0, -65544, 0, 0, -65543, 0, 0, -65542, 0, 0, -65541, 0, 0, -65540, 0, 0, -65539, 0, 0, -65538, 0, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -131066, 0, 0, -131065, 0, 0, -131064, 0, 0, -131063, 0, 0, -131062, 0, 0, -131061, 0, 0, -131060, 0, 0, -131059, 0, 0, -131058, 0, 0, -131057, 0, 0, -131056, 0, 0, -131055, 0, 0, -131054, 0, 0, -131053, 0, 0, -131052, 8, 0, -131051, 0, 0, -22, 0, 0, -21, 8, 0, -20, 0, 0, -19, 0, 0, -18, 0, 0, -17, 0, 0, -16, 0, 0, -15, 0, 0, -14, 0, 0, -13, 0, 0, -12, 0, 0, -11, 0, 0, -10, 0, 0, -9, 0, 0, -8, 0, 0, -7, 0, 0, -6, 0, 0, -5, 0, 0, -4, 0, 0, -3, 0, 0, -2, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 8, 0, -65515, 0, 0, 65514, 0, 0, 65515, 8, 0, 65516, 0, 0, 65517, 0, 0, 65518, 0, 0, 65519, 0, 0, 65520, 0, 0, 65521, 0, 0, 65522, 0, 0, 65523, 0, 0, 65524, 0, 0, 65525, 0, 0, 65526, 0, 0, 65527, 0, 0, 65528, 0, 0, 65529, 0, 0, 65530, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 8, 0, 21, 0, 0, 131050, 0, 0, 131051, 8, 0, 131052, 0, 0, 131053, 0, 0, 131054, 0, 0, 131055, 0, 0, 131056, 0, 0, 131057, 0, 0, 131058, 0, 0, 131059, 0, 0, 131060, 0, 0, 131061, 0, 0, 131062, 0, 0, 131063, 0, 0, 131064, 0, 0, 131065, 0, 0, 131066, 0, 0, 131067, 0, 0, 131068, 0, 0, 131069, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 8, 0, 65557, 0, 0, 196586, 0, 0, 196587, 8, 0, 196588, 0, 0, 196589, 0, 0, 196590, 0, 0, 196591, 0, 0, 196592, 0, 0, 196593, 0, 0, 196594, 0, 0, 196595, 0, 0, 196596, 0, 0, 196597, 0, 0, 196598, 0, 0, 196599, 0, 0, 196600, 0, 0, 196601, 0, 0, 196602, 0, 0, 196603, 0, 0, 196604, 0, 0, 196605, 0, 0, 196606, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 8, 0, 131093, 0, 0, 262122, 0, 0, 262123, 8, 0, 262124, 0, 0, 262125, 0, 0, 262126, 0, 0, 262127, 0, 0, 262128, 0, 0, 262129, 0, 0, 262130, 0, 0, 262131, 0, 0, 262132, 0, 0, 262133, 0, 0, 262134, 0, 0, 262135, 0, 0, 262136, 0, 0, 262137, 0, 0, 262138, 0, 0, 262139, 0, 0, 262140, 0, 0, 262141, 0, 0, 262142, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 8, 0, 196629, 0, 0, 327658, 0, 0, 327659, 8, 0, 327660, 0, 0, 327661, 0, 0, 327662, 0, 0, 327663, 0, 0, 327664, 0, 0, 327665, 0, 0, 327666, 0, 0, 327667, 0, 0, 327668, 0, 0, 327669, 0, 0, 327670, 0, 0, 327671, 0, 0, 327672, 0, 0, 327673, 0, 0, 327674, 0, 0, 327675, 0, 0, 327676, 0, 0, 327677, 0, 0, 327678, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 8, 0, 262165, 0, 0, 393194, 0, 0, 393195, 8, 0, 393196, 0, 0, 393197, 0, 0, 393198, 0, 0, 393199, 0, 0, 393200, 0, 0, 393201, 0, 0, 393202, 0, 0, 393203, 0, 0, 393204, 0, 0, 393205, 0, 0, 393206, 0, 0, 393207, 0, 0, 393208, 0, 0, 393209, 0, 0, 393210, 0, 0, 393211, 0, 0, 393212, 0, 0, 393213, 0, 0, 393214, 0, 0, 393215, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 8, 0, 327701, 0, 0, 458730, 0, 0, 458731, 8, 0, 458732, 0, 0, 458733, 0, 0, 458734, 0, 0, 458735, 0, 0, 458736, 0, 0, 458737, 0, 0, 458738, 0, 0, 458739, 0, 0, 458740, 0, 0, 458741, 0, 0, 458742, 0, 0, 458743, 0, 0, 458744, 0, 0, 458745, 0, 0, 458746, 0, 0, 458747, 0, 0, 458748, 0, 0, 458749, 0, 0, 458750, 0, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 8, 0, 393237, 0, 0, 524266, 0, 0, 524267, 8, 0, 524268, 0, 0, 524269, 0, 0, 524270, 0, 0, 524271, 0, 0, 524272, 0, 0, 524273, 0, 0, 524274, 0, 0, 524275, 0, 0, 524276, 0, 0, 524277, 0, 0, 524278, 0, 0, 524279, 0, 0, 524280, 0, 0, 524281, 0, 0, 524282, 0, 0, 524283, 0, 0, 524284, 0, 0, 524285, 0, 0, 524286, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 8, 0, 458773, 0, 0, 589802, 0, 0, 589803, 8, 0, 589804, 0, 0, 589805, 0, 0, 589806, 0, 0, 589807, 0, 0, 589808, 0, 0, 589809, 0, 0, 589810, 0, 0, 589811, 0, 0, 589812, 0, 0, 589813, 0, 0, 589814, 0, 0, 589815, 0, 0, 589816, 0, 0, 589817, 0, 0, 589818, 0, 0, 589819, 0, 0, 589820, 0, 0, 589821, 0, 0, 589822, 0, 0, 589823, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 8, 0, 524309, 0, 0, 655338, 0, 0, 655339, 8, 0, 655340, 0, 0, 655341, 0, 0, 655342, 0, 0, 655343, 0, 0, 655344, 0, 0, 655345, 0, 0, 655346, 0, 0, 655347, 0, 0, 655348, 0, 0, 655349, 0, 0, 655350, 0, 0, 655351, 0, 0, 655352, 0, 0, 655353, 0, 0, 655354, 0, 0, 655355, 0, 0, 655356, 0, 0, 655357, 0, 0, 655358, 0, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 8, 0, 589845, 0, 0, 720874, 0, 0, 720875, 8, 0, 720876, 0, 0, 720877, 0, 0, 720878, 0, 0, 720879, 0, 0, 720880, 0, 0, 720881, 0, 0, 720882, 0, 0, 720883, 0, 0, 720884, 0, 0, 720885, 0, 0, 720886, 0, 0, 720887, 0, 0, 720888, 0, 0, 720889, 0, 0, 720890, 0, 0, 720891, 0, 0, 720892, 0, 0, 720893, 0, 0, 720894, 0, 0, 720895, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 8, 0, 655381, 0, 0, 786410, 0, 0, 786411, 8, 0, 786412, 8, 0, 786413, 8, 0, 786414, 8, 0, 786415, 8, 0, 786416, 8, 0, 786417, 8, 0, 786418, 8, 0, 786419, 8, 0, 786420, 8, 0, 786421, 8, 0, 786422, 8, 0, 786423, 8, 0, 786424, 8, 0, 786425, 8, 0, 786426, 8, 0, 786427, 8, 0, 786428, 8, 0, 786429, 8, 0, 786430, 8, 0, 786431, 8, 0, 720896, 8, 0, 720897, 8, 0, 720898, 8, 0, 720899, 8, 0, 720900, 8, 0, 720901, 8, 0, 720902, 8, 0, 720903, 8, 0, 720904, 8, 0, 720905, 8, 0, 720906, 8, 0, 720907, 8, 0, 720908, 8, 0, 720909, 8, 0, 720910, 8, 0, 720911, 8, 0, 720912, 8, 0, 720913, 8, 0, 720914, 8, 0, 720915, 8, 0, 720916, 8, 0, 720917, 0, 0, 851946, 0, 0, 851947, 0, 0, 851948, 0, 0, 851949, 0, 0, 851950, 0, 0, 851951, 0, 0, 851952, 0, 0, 851953, 0, 0, 851954, 0, 0, 851955, 0, 0, 851956, 0, 0, 851957, 0, 0, 851958, 0, 0, 851959, 0, 0, 851960, 0, 0, 851961, 0, 0, 851962, 0, 0, 851963, 0, 0, 851964, 0, 0, 851965, 0, 0, 851966, 0, 0, 851967, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0 )

[node name="Walls" parent="." instance=ExtResource( 4 )]
z_index = 1
tile_data = PoolIntArray( -786454, 8, 0, -786453, 8, 0, -786452, 8, 0, -786451, 8, 0, -786450, 8, 0, -786449, 8, 0, -786448, 8, 0, -786447, 8, 0, -786446, 8, 0, -786445, 8, 0, -786444, 8, 0, -786443, 8, 0, -786442, 8, 0, -786441, 8, 0, -786440, 8, 0, -786439, 8, 0, -786438, 8, 0, -786437, 8, 0, -786436, 8, 0, -786435, 8, 0, -786434, 8, 0, -786433, 8, 0, -851968, 8, 0, -851967, 8, 0, -851966, 8, 0, -851965, 8, 0, -851964, 8, 0, -851963, 8, 0, -851962, 8, 0, -851961, 8, 0, -851960, 8, 0, -851959, 8, 0, -851958, 8, 0, -851957, 8, 0, -851956, 8, 0, -851955, 8, 0, -851954, 8, 0, -851953, 8, 0, -851952, 8, 0, -851951, 8, 0, -851950, 8, 0, -851949, 8, 0, -851948, 8, 0, -851947, 8, 0, -720918, 8, 0, -720917, 8, 0, -720916, 8, 0, -720915, 8, 0, -720914, 8, 0, -720913, 8, 0, -720912, 8, 0, -720911, 8, 0, -720910, 8, 0, -720909, 8, 0, -720908, 8, 0, -720907, 8, 0, -720906, 8, 0, -720905, 8, 0, -720904, 8, 0, -720903, 8, 0, -720902, 8, 0, -720901, 8, 0, -720900, 8, 0, -720899, 8, 0, -720898, 8, 0, -720897, 8, 0, -786432, 8, 0, -786431, 8, 0, -786430, 8, 0, -786429, 8, 0, -786428, 8, 0, -786427, 8, 0, -786426, 8, 0, -786425, 8, 0, -786424, 8, 0, -786423, 8, 0, -786422, 8, 0, -786421, 8, 0, -786420, 8, 0, -786419, 8, 0, -786418, 8, 0, -786417, 8, 0, -786416, 8, 0, -786415, 8, 0, -786414, 8, 0, -786413, 8, 0, -786412, 8, 0, -786411, 8, 0, -655382, 8, 0, -655381, 8, 0, -655380, 8, 0, -655379, 8, 0, -655378, 8, 0, -655377, 8, 0, -655376, 8, 0, -655375, 8, 0, -655374, 8, 0, -655373, 8, 0, -655372, 8, 0, -655371, 8, 0, -655370, 8, 0, -655369, 8, 0, -655368, 8, 0, -655367, 8, 0, -655366, 8, 0, -655365, 8, 0, -655364, 8, 0, -655363, 8, 0, -655362, 8, 0, -655361, 8, 0, -720896, 8, 0, -720895, 8, 0, -720894, 8, 0, -720893, 8, 0, -720892, 8, 0, -720891, 8, 0, -720890, 8, 0, -720889, 8, 0, -720888, 8, 0, -720887, 8, 0, -720886, 8, 0, -720885, 8, 0, -720884, 8, 0, -720883, 8, 0, -720882, 8, 0, -720881, 8, 0, -720880, 8, 0, -720879, 8, 0, -720878, 8, 0, -720877, 8, 0, -720876, 8, 0, -720875, 8, 0, -589846, 8, 0, -589845, 8, 0, -589844, 11, 0, -589843, 11, 0, -589842, 11, 0, -589841, 11, 0, -589840, 11, 0, -589839, 11, 0, -589838, 11, 0, -589837, 11, 0, -589836, 11, 0, -589835, 11, 0, -589834, 11, 0, -589833, 11, 0, -589832, 11, 0, -589831, 11, 0, -589830, 11, 0, -589829, 11, 0, -589828, 11, 0, -589827, 11, 0, -589826, 11, 0, -589825, 11, 0, -655360, 11, 0, -655359, 11, 0, -655358, 11, 0, -655357, 11, 0, -655356, 11, 0, -655355, 11, 0, -655354, 11, 0, -655353, 11, 0, -655352, 11, 0, -655351, 11, 0, -655350, 11, 0, -655349, 11, 0, -655348, 11, 0, -655347, 11, 0, -655346, 11, 0, -655345, 11, 0, -655344, 11, 0, -655343, 11, 0, -655342, 11, 0, -655341, 11, 0, -655340, 8, 0, -655339, 8, 0, -524310, 8, 0, -524309, 9, 0, -589804, 7, 0, -589803, 8, 0, -458774, 8, 0, -458773, 9, 0, -524268, 7, 0, -524267, 8, 0, -393238, 8, 0, -393237, 9, 0, -458732, 7, 0, -458731, 8, 0, -327702, 8, 0, -327701, 9, 0, -393196, 7, 0, -393195, 8, 0, -262166, 8, 0, -262165, 9, 0, -327660, 7, 0, -327659, 8, 0, -196630, 8, 0, -196629, 9, 0, -262124, 7, 0, -262123, 8, 0, -131094, 8, 0, -131093, 9, 0, -196588, 7, 0, -196587, 8, 0, -65558, 8, 0, -65557, 9, 0, -131052, 7, 0, -131051, 8, 0, -22, 8, 0, -21, 9, 0, -65516, 7, 0, -65515, 8, 0, 65514, 8, 0, 65515, 9, 0, 20, 7, 0, 21, 8, 0, 131050, 8, 0, 131051, 9, 0, 65556, 7, 0, 65557, 8, 0, 196586, 8, 0, 196587, 9, 0, 131092, 7, 0, 131093, 8, 0, 262122, 8, 0, 262123, 9, 0, 196628, 7, 0, 196629, 8, 0, 327658, 8, 0, 327659, 9, 0, 262164, 7, 0, 262165, 8, 0, 393194, 8, 0, 393195, 9, 0, 327700, 7, 0, 327701, 8, 0, 458730, 8, 0, 458731, 9, 0, 393236, 7, 0, 393237, 8, 0, 524266, 8, 0, 524267, 9, 0, 458772, 7, 0, 458773, 8, 0, 589802, 8, 0, 589803, 9, 0, 524308, 7, 0, 524309, 8, 0, 655338, 8, 0, 655339, 9, 0, 589844, 7, 0, 589845, 8, 0, 720874, 8, 0, 720875, 9, 0, 655380, 7, 0, 655381, 8, 0, 786410, 8, 0, 786411, 8, 0, 786412, 5, 0, 786413, 5, 0, 786414, 5, 0, 786415, 5, 0, 786416, 5, 0, 786417, 5, 0, 786418, 5, 0, 786419, 5, 0, 786420, 5, 0, 786421, 5, 0, 786422, 5, 0, 786423, 5, 0, 786424, 5, 0, 786425, 5, 0, 786426, 5, 0, 786427, 5, 0, 786428, 5, 0, 786429, 5, 0, 786430, 5, 0, 786431, 5, 0, 720896, 5, 0, 720897, 5, 0, 720898, 5, 0, 720899, 5, 0, 720900, 5, 0, 720901, 5, 0, 720902, 5, 0, 720903, 5, 0, 720904, 5, 0, 720905, 5, 0, 720906, 5, 0, 720907, 5, 0, 720908, 5, 0, 720909, 5, 0, 720910, 5, 0, 720911, 5, 0, 720912, 5, 0, 720913, 5, 0, 720914, 5, 0, 720915, 5, 0, 720916, 8, 0, 720917, 8, 0, 851946, 8, 0, 851947, 8, 0, 851948, 8, 0, 851949, 8, 0, 851950, 8, 0, 851951, 8, 0, 851952, 8, 0, 851953, 8, 0, 851954, 8, 0, 851955, 8, 0, 851956, 8, 0, 851957, 8, 0, 851958, 8, 0, 851959, 8, 0, 851960, 8, 0, 851961, 8, 0, 851962, 8, 0, 851963, 8, 0, 851964, 8, 0, 851965, 8, 0, 851966, 8, 0, 851967, 8, 0, 786432, 8, 0, 786433, 8, 0, 786434, 8, 0, 786435, 8, 0, 786436, 8, 0, 786437, 8, 0, 786438, 8, 0, 786439, 8, 0, 786440, 8, 0, 786441, 8, 0, 786442, 8, 0, 786443, 8, 0, 786444, 8, 0, 786445, 8, 0, 786446, 8, 0, 786447, 8, 0, 786448, 8, 0, 786449, 8, 0, 786450, 8, 0, 786451, 8, 0, 786452, 8, 0, 786453, 8, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="GameOverLayer" type="Node2D" parent="."]
visible = false
z_index = 2

[node name="GameOverLabel" type="Label" parent="GameOverLayer"]
margin_left = -54.0
margin_top = -81.0
margin_right = 54.0
margin_bottom = -67.0
custom_fonts/font = ExtResource( 6 )
text = "Game Over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KilledByLabel" type="Label" parent="GameOverLayer"]
margin_left = -54.0
margin_top = -47.0
margin_right = 54.0
margin_bottom = -33.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 6 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
